--- a/CycletexBikesMvc/Views/Account/Register.cshtml
+++ b/CycletexBikesMvc/Views/Account/Register.cshtml
@@ -10,6 +10,14 @@
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
     <hr />
+    // Add HTML for Customer Name input.
+    @Html.ValidationSummary("", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+        </div>
+    </div>
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
