Complete home page
- import custom testamonial images
- import fontawesome
- populate with text
- import custom header image

closes #5

--- a/CycletexBikesMvc/Views/Home/Index.cshtml
+++ b/CycletexBikesMvc/Views/Home/Index.cshtml
@@ -2,30 +2,49 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<!-- Masthead -->
+<header class="masthead text-white text-center">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-9 mx-auto">
+                <h1 class="mb-5">CycleTex</h1>
+                <h2>An independent bike repair shop based out of Glasgow</h2>
+                <h2>No job is too small</h2>
+            </div>
+        </div>
+    </div>
+</header>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<!-- Testimonials -->
+<section class="testimonials text-center bg-light">
+    <div class="container">
+        <h2 class="mb-5">What people are saying...</h2>
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                    <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
+                    <h5>Ross McLean</h5>
+                    <p class="font-weight-light mb-0">"Wow, Bikes!"</p>
+                    <p class="font-weight-lighter font-italic">Glasgow</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                    <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
+                    <h5>Ross McLean</h5>
+                    <p class="font-weight-light mb-0">"They fixed many bikes for me. I have many bikes, groups of bikes, and I feed them only natural grain!"</p>
+                    <p class="font-weight-lighter font-italic">Glasgow</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                    <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
+                    <h5>Ross McLean</h5>
+                    <p class="font-weight-light mb-0">"Utterly disappointed. They did not fix my bike. I have no bike."</p>
+                    <p class="font-weight-lighter font-italic">Glasgow</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+</section>
