--- a/CycletexBikesMvc/Views/Shared/_LoginPartial.cshtml
+++ b/CycletexBikesMvc/Views/Shared/_LoginPartial.cshtml
@@ -1,22 +1,36 @@
 ﻿@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "ml-auto small mb-2 mb-md-0" }))
     {
-    @Html.AntiForgeryToken()
+        @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item nav-link">
+                <!-- Show logged in users username/email -->
+                @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
+            </li>
+            <li class="nav-item nav-link">
+                <a class="nav-link btn btn-outline-secondary" href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+            </li>
+        </ul>
     }
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item nav-link">
+            <a class="nav-link btn btn-primary" onclick="location.href='@Url.Action("Login", "Account", null)'">Login</a>
+        </li>
+        <li class="nav-item nav-link">
+            <a class="nav-link btn btn-outline-secondary" onclick="location.href='@Url.Action("Register", "Account", null)'">Register</a>
+        </li>
+
+        @*<li class="nav-item">
+            <a onclick="location.href='@Url.Action("Register", "Account", null)'" class="nav-link">Register</a>
+        </li>
+        <li class="nav-item">
+            <a onclick="location.href='@Url.Action("Login", "Account", null)'" class="nav-link">Login</a>
+        </li>*@
     </ul>
 }
