--- a/CycletexBikesMvc/Views/Shared/_Layout.cshtml
+++ b/CycletexBikesMvc/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                         @Html.ActionLink("Services", "Index", "Service", null, new { @class = "nav-link" })
                     </li>
                     <li class="nav-item nav-link">
-                        @Html.ActionLink("Create a Booking", "Create", "Booking", null, new { @class = "nav-link" })
+                        @Html.ActionLink("Create a Booking", "Index", "Event", null, new { @class = "nav-link" })
                     </li>
 
                     <!-- TODO: This link format could potentially stop nav links from navigating to /Home/Index each time. -->
