--- a/CycletexBikesMvc/Views/Shared/_Layout.cshtml
+++ b/CycletexBikesMvc/Views/Shared/_Layout.cshtml
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -20,42 +19,11 @@
 
     <!-- Custom styles for this template -->
     <link href="~/Content/Site.css" rel="stylesheet">
-
 </head>
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                @Html.ActionLink("CycleTex", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item nav-link">
-                        @Html.ActionLink("Services", "Index", "Service", null, new { @class = "nav-link" })
-                    </li>
-                    <li class="nav-item nav-link">
-                        @Html.ActionLink("Create a Booking", "Create", "Booking", null, new { @class = "nav-link" })
-                    </li>
-
-                    <!-- TODO: This link format could potentially stop nav links from navigating to /Home/Index each time. -->
-                    @*<li class="nav-item">
-                        <a onclick="location.href='@Url.Action("CreateAppointment", "TempUser")'" class="nav-link">Book Appoinment</a>
-                    </li>*@
-
-
-                    <!-- Login/register buttons -->
-                    @Html.Partial("_loginPartial")
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
+    @Html.Partial("_NavBar")
 
     <!--Render Page Content-->
     @RenderBody()
