--- a/CycletexBikesMvc/Views/Shared/_NavBar.cshtml
+++ b/CycletexBikesMvc/Views/Shared/_NavBar.cshtml
@@ -28,13 +28,7 @@
                         @Html.ActionLink("Create a Booking", "Login", "Account", null, new { @class = "nav-link" })
                     </li>
                 }
-                <!-- TODO: This link format could potentially stop nav links from navigating to /Home/Index each time. -->
-                @*<li class="nav-item">
-                        <a onclick="location.href='@Url.Action("CreateAppointment", "TempUser")'" class="nav-link">Book Appoinment</a>
-                    </li>*@
-
-
-                <!-- Login/register buttons -->
+                @* Login/register buttons *@
                 @Html.Partial("_loginPartial")
             </ul>
         </div>
