Seed BikeServices. Remove BikeServiceNames enum and fully replace with class.

--- a/CycletexBikesMvc/Views/Home/Index.cshtml
+++ b/CycletexBikesMvc/Views/Home/Index.cshtml
@@ -3,18 +3,7 @@
 }
 
 <!-- Masthead -->
-<header class="masthead text-white text-center">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-9 mx-auto">
-                <h1 class="mb-5">CycleTex</h1>
-                <h2>An independent bike repair shop based out of Glasgow</h2>
-                <h2>No job is too small</h2>
-            </div>
-        </div>
-    </div>
-</header>
+@Html.Partial("_MastHead")
 
 <!-- Testimonials -->
 <section class="testimonials text-center bg-light">
