--- a/CycletexBikesMvc/Views/Booking/Create.cshtml
+++ b/CycletexBikesMvc/Views/Booking/Create.cshtml
@@ -4,54 +4,58 @@
     ViewBag.Title = "Create Booking";
 }
 
+
+
 <section class="">
     <div class="container">
-        <h2 class="text-center">Create Booking</h2>
+        <h1 class="mb-5">Create Booking</h1>
         <div class="row">
+
+
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+                <div class="form-horizontal bg-light">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Bike, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownListFor(model => model.Bike, Model.Bikes, new { htmlAttributes = new { @class = "form-control", id = "BikeDropDown" } })
-                        @Html.ValidationMessageFor(model => model.Bikes, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Bike, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownListFor(model => model.Bike, Model.Bikes, new { htmlAttributes = new { @class = "form-control", id = "BikeDropDown" } })
+                            @Html.ValidationMessageFor(model => model.Bikes, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DebitCard, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownListFor(model => model.DebitCard, Model.DebitCards, new { htmlAttributes = new { @class = "form-control", id = "DebitCardDropDown" } })
-                        @Html.ValidationMessageFor(model => model.DebitCards, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.DebitCard, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownListFor(model => model.DebitCard, Model.DebitCards, new { htmlAttributes = new { @class = "form-control", id = "DebitCardDropDown" } })
+                            @Html.ValidationMessageFor(model => model.DebitCards, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Services, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownListFor(model => model.Services, new SelectList(Model.Services, "", "Name"), new { htmlAttributes = new { @class = "form-control", id = "DebitCardDropDown" } })
-                        @Html.ValidationMessageFor(model => model.Services, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.BikeService, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownListFor(model => model.BikeService, Model.BikeServices, new { htmlAttributes = new { @class = "form-control", id = "BikeServicesDropDown" } })
+                            @Html.ValidationMessageFor(model => model.BikeServices, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Create" class="btn btn-default" />
+                        </div>
                     </div>
                 </div>
-            </div>
             }
         </div>
     </div>
