--- a/CycletexBikesMvc/Views/Booking/Create.cshtml
+++ b/CycletexBikesMvc/Views/Booking/Create.cshtml
@@ -27,7 +27,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.Bike, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.DropDownListFor(model => model.Bike, Model.Bikes, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.DropDownListFor(model => model.Bike.Id, new SelectList(Model.Bikes, "Id", "Model"), "Select", new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Bikes, "", new { @class = "text-danger" })
                         </div>
                     </div>
