Add dateTimePicker to Create Booking view. Initial unavailable date logic for bookings.

--- a/CycletexBikesMvc/Views/Booking/Create.cshtml
+++ b/CycletexBikesMvc/Views/Booking/Create.cshtml
@@ -63,6 +63,17 @@
     </div>
 </section>
 
+<script>
+    $(function () {
+        $('#Date').datetimepicker(
+        {
+            format: 'DD-MMM-YYYY HH:mm',
+            sideBySide: true,
+            showTodayButton: true
+        });
+    });
+</script>
+
 @section scripts {
     @Scripts.Render("~/bundles/bootstrap-datetimepicker")
 }
