Add BootstrapNotifications partial to Create view.

--- a/CycletexBikesMvc/Views/Booking/Create.cshtml
+++ b/CycletexBikesMvc/Views/Booking/Create.cshtml
@@ -10,7 +10,13 @@
 
 <section class="">
     <div class="container">
+        <br />
         <h1 class="mb-5">Create Booking</h1>
+        <br />
+        <hr />
+        <br />
+        @Html.Partial("_Notifications")
+        <br />
         <div class="row">
 
 
