Fix validation for checking exact duplicate dates between a new and existing booking.

--- a/CycletexBikesMvc/Views/Shared/_Layout.cshtml
+++ b/CycletexBikesMvc/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿<!--name: Ross McLean-->
+<!--date: 12/05/20-->
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,6 +11,9 @@
     <meta name="author" content="">
 
     <title>Landing Page - Start Bootstrap Theme</title>
+
+    @* FontAwesome import *@
+<script src="https://kit.fontawesome.com/19df47b718.js" crossorigin="anonymous"></script>
 
     @Styles.Render("~/Content/css")
     @RenderSection("styles", required: false)
@@ -83,10 +89,6 @@
         </div>
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <!--Path has been changed to reflect custom Bootstrap theme requirements-->
-    @*<script src="~/Scripts/jquery/jquery.min.js"></script>
-    <script src="~/Scripts/bootstrap.bundle.min.js"></script>*@
     <!-- FontAwesome import -->
     <script src="https://kit.fontawesome.com/19df47b718.js" crossorigin="anonymous"></script>
     @RenderSection("scripts", required: false)
