--- a/CycletexBikesMvc/Views/Booking/Create.cshtml
+++ b/CycletexBikesMvc/Views/Booking/Create.cshtml
@@ -1,4 +1,7 @@
-﻿@model CycletexBikesMvc.ViewModels.CreateBookingViewModel
+﻿<!--name: Ross McLean-->
+<!--date: 12/05/20-->
+
+@model CycletexBikesMvc.ViewModels.CreateBookingViewModel
 
 @{
     ViewBag.Title = "Create Booking";
@@ -35,10 +38,10 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Bike, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.SelectedBikeId, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.DropDownListFor(model => model.Bike.Id, new SelectList(Model.Bikes, "Id", "Model"), "Select", new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Bikes, "", new { @class = "text-danger" })
+                            @Html.DropDownListFor(model => model.SelectedBikeId, Model.Bikes, "Select", new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Bikes, "Choose a bike", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -75,7 +78,18 @@
         {
             format: 'DD-MMM-YYYY HH:mm',
             sideBySide: true,
-            showTodayButton: true
+            showTodayButton: true,
+            // Using FontAwesome glyphs because Bootstrap glyphs are not included in the Bootstrap NuGet package
+            icons: {
+                time: "fa fa-clock-o",
+                date: "fa fa-calendar",
+                up: "fa fa-arrow-up",
+                down: "fa fa-arrow-down",
+                previous: "fa fa-chevron-left",
+                next: "fa fa-chevron-right",
+                today: "fa fa-clock-o",
+                clear: "fa fa-trash-o"
+            }
         });
     });
 </script>
