--- a/CycletexBikesMvc/Views/Booking/Index.cshtml
+++ b/CycletexBikesMvc/Views/Booking/Index.cshtml
@@ -6,6 +6,8 @@
 
 <h2>Index</h2>
 
+@Html.Partial("_Notifications")
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -32,7 +34,7 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@*@foreach (var item in Model) {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Customer.Name)
@@ -58,6 +60,6 @@
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
-}
+}*@
 
 </table>
