--- a/CycletexBikesMvc/Views/Booking/Create.cshtml
+++ b/CycletexBikesMvc/Views/Booking/Create.cshtml
@@ -38,10 +38,10 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.SelectedBikeId, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Bikes, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.DropDownListFor(model => model.SelectedBikeId, Model.Bikes, "Select", new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Bikes, "Choose a bike", new { @class = "text-danger" })
+                            @Html.ValidationMessageFor(model => model.Bikes, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
