--- a/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
+++ b/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
@@ -1,15 +1,13 @@
 ﻿@model IEnumerable<CycletexBikesMvc.Models.Booking>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "ViewAllCustomersBookings";
 }
 
-<h2>Index</h2>
-
-@Html.Partial("_Notifications")
+<h2>ViewAllCustomersBookings</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", "Booking")
 </p>
 <table class="table">
     <tr>
@@ -23,6 +21,9 @@
             @Html.DisplayNameFor(model => model.Date)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.BikeId)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.CheckInDate)
         </th>
         <th>
@@ -34,7 +35,7 @@
         <th></th>
     </tr>
 
-@*@foreach (var item in Model) {
+@foreach (var item in Model) {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Customer.Name)
@@ -44,6 +45,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Date)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.BikeId)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CheckInDate)
@@ -60,6 +64,6 @@
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
-}*@
+}
 
 </table>
