Create ViewAllBookings view. Add _Notifications partial to ViewAllBookings and ViewAllCustomerBookings views. Implement validation in ViewAllBookings action.

--- a/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
+++ b/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
@@ -6,6 +6,10 @@
 
 <h2>ViewAllCustomersBookings</h2>
 
+<br />
+@Html.Partial("_Navigation")
+<hr />
+
 <p>
     @Html.ActionLink("Create New", "Create", "Booking")
 </p>
