Fix _Notification partial calls in ViewAllBookings and ViewAllCustomerBookings views.

--- a/CycletexBikesMvc/Views/Booking/ViewAllBookings.cshtml
+++ b/CycletexBikesMvc/Views/Booking/ViewAllBookings.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<CycletexBikesMvc.Models.Booking>
+﻿<!--name: Ross McLean-->
+<!--date: 12/05/20-->
+
+@model IEnumerable<CycletexBikesMvc.Models.Booking>
 
 @{
     ViewBag.Title = "ViewAllBookings";
@@ -7,7 +10,7 @@
 <h2>ViewAllBookings</h2>
 
 <br />
-@Html.Partial("_Navigation")
+@Html.Partial("_Notifications")
 <hr />
 
 <table class="table">
