--- a/CycletexBikesMvc/Views/Shared/_NavBar.cshtml
+++ b/CycletexBikesMvc/Views/Shared/_NavBar.cshtml
@@ -1,4 +1,7 @@
-﻿@using Microsoft.AspNet.Identity;
+﻿<!--name: Ross McLean-->
+<!--date: 12/05/20-->
+
+@using Microsoft.AspNet.Identity;
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
     <div class="container">
