--- a/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
+++ b/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<CycletexBikesMvc.Models.Booking>
 
 @{
-    ViewBag.Title = "ViewAllCustomersBookings";
+    ViewBag.Title = "Your Bookings";
 }
 
-<h2>ViewAllCustomersBookings</h2>
+<h2>Your Bookings</h2>
 
 <br />
 @Html.Partial("_Notifications")
